# yolo-beach-wracks-monitoring-socib

./: .gitignore  Dockerfile  README.md  ai4-metadata.yml  metadata.json  pyproject.toml  tox.ini
.sqa/: config.yml
api/: __init__.py  config.py  schemas.py  utils.py
beach_wracks_monitoring/: README.md  __init__.py  utils.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-some_dummy_notebook.ipynb
socib-beach-wracks-identification_api/: README.md  __init__.py  config.py  utils.py
tests/test_metadata/: test_requirements.py
tests/test_predictions/: conftest.py  test_requirements.py
tests/test_training/: conftest.py
yolov8_api/: __init__.py
