[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "beach_wracks_monitoring"
description = "add api to beach_wracks_monitoring"
# !! Authors and Authors_emails are taken from setup.py. Otherwise wrongly rendered !!
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-only" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

# Add author and author email here
authors = [{name= "Fahimeh Alibabaei", email= "khadijeh.alibabaei@kit.edu"} ,{name= "Lisana Berberi", email= "lisana.berberi@kit.edu"} ]
#authors-email = ["khadijeh.alibabaei@kit.edu"]

[project.urls]
"Homepage" = "https://codebase.helmholtz.cloud/m-team/ai/ai4os-yolov8-torch"
"Bug Tracker" = "https://codebase.helmholtz.cloud/m-team/ai/ai4os-yolov8-torch/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = ["DATA_PATH=tests/data", "MODELS_PATH=tests/models"]
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = ["beach_wracks_monitoring", "beach_wracks_monitoring.api"]

[tool.setuptools.package-dir]
"beach_wracks_monitoring.api" = "api"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
beach_wracks_monitoring = "beach_wracks_monitoring.api"
