[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "socib-beach-wracks-identification"
description = "DESCRIPTION"
# !! Authors and Authors_emails are taken from setup.py. Otherwise wrongly rendered !!
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-only" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

# Add author and author email here
authors = [{name= "Jesus Soriano-Gonzalez", email= "jsoriano@socib.es"},
           {name= "Josep Oliver-Sanso", email= "josep.oliverr@gmail.com"},
           {name= "Fahimeh Alibabaei", email= "khadijeh.alibabaei@kit.edu"}]


[project.urls]
"Homepage" = "https://codebase.helmholtz.cloud/m-team/ai/socib-beach-wracks-identification"
"Bug Tracker" = "https://codebase.helmholtz.cloud/m-team/ai/socib-beach-wracks-identification/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = ["DATA_PATH=tests/data", "MODELS_PATH=tests/models"]
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = ["socib-beach-wracks-identification", "socib-beach-wracks-identification.api"]

[tool.setuptools.package-dir]
"socib-beach-wracks-identification.api" = "api"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
socib-beach-wracks-identification = "socib-beach-wracks-identification.api"
